<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_panel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/space_l"
        android:paddingEnd="@dimen/space_s"
        android:paddingVertical="@dimen/space_m">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sess_title"
            android:textColor="@color/fg_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/session_close"
            style="@style/FooterIconButton"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/dlg_cancel" />
    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="1dp"
        android:background="@color/border_soft" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/session_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/space_s" />

    <View android:layout_width="match_parent" android:layout_height="1dp"
        android:background="@color/border_soft" />

    <Button
        android:id="@+id/session_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_m"
        android:text="@string/sess_new"
        android:textColor="@color/fg_1"
        android:background="@drawable/bg_shortcut"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="@dimen/space_s"
        android:paddingHorizontal="@dimen/space_m" />
</LinearLayout>
